alignment/colour issue fixed

--- a/src/assets/styles/custom.css
+++ b/src/assets/styles/custom.css
@@ -690,7 +690,7 @@ input:focus {
 
 .link-text {
   /* background-color: red; */
-  /* padding-left: 50px; */
+  padding-right: 24px;
   /* margin-left: 80px; */
 }
 
